test/asm/charmap-empty.err
error: charmap-empty.asm(1):
    Cannot map an empty string
error: charmap-empty.asm(2):
    syntax error, unexpected end of line
error: Assembly aborted (2 errors)!
