test/asm/charmap-empty.asm
charmap "", 1
charmap "nonempty", ; nothing
